# Rythe-LLRI

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  fundamentals.html  genindex.html  getting-started.html  index.html  legion-llri.sln  objects.inv  search.html  searchindex.js  terminology.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: analysis.yml  build.yml  docs-build.yml  docs-deploy.yml  docs.yml  update-license.yml
_sources/: fundamentals.rst.txt
_static/: documentation_options.js
api/: class_view_hierarchy.html  classllri_1_1_adapter.html  classllri_1_1_device.html  classllri_1_1_instance.html  define_llri_8hpp_1a10c22f0cc6e147803adb19dc6457f8da.html  define_llri_8hpp_1a1e4505ac5252b2fb9a494f845ca240a2.html  define_llri_8hpp_1a64a550a1e049b0590273a8b1ac330a34.html  define_llri_8hpp_1aea2e0d3d106205f281552bd51f09ad89.html  dir__home_runner_work_Legion-LLRI_Legion-LLRI_legion.html  dir__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine.html  dir__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri.html  dir__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail.html  enum_adapter_8hpp_1ab9db737391a5274e8f42626982a42e75.html  enum_adapter__extensions_8hpp_1a0b70dbbfd7013e0a878b3708f30a5926.html  enum_instance_8hpp_1a11c3d8b872aea2bea18758535aed41ec.html  enum_instance_8hpp_1a5725e80e52418460957649853c101b2b.html  enum_instance__extensions_8hpp_1ac6ac5e6ab9acce0c3ecd7324dfa76d79.html  enum_llri_8hpp_1ac07c83e6daf35bc83a9cbc57beb49104.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_adapter.hpp.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_adapter.inl.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_adapter_extensions.hpp.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_device.hpp.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_device.inl.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_instance.hpp.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_instance.inl.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_instance_extensions.hpp.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_llri.inl.html  file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_llri.hpp.html  file_view_hierarchy.html  function_instance_8hpp_1a11b4f32dde18edcc96e2c0ea1dd09b90.html  function_instance_8hpp_1abb862b375183a6001c70b1c6367e26ed.html  function_instance_8inl_1a2af1479e39e158d70dddc4f1674b49ea.html  library.html  library_root.html  namespace_llri.html  program_listing_file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_adapter.hpp.html  program_listing_file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_adapter.inl.html  program_listing_file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_adapter_extensions.hpp.html  program_listing_file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_device.hpp.html  program_listing_file__home_runner_work_Legion-LLRI_Legion-LLRI_legion_engine_llri_detail_device.inl.html  (+17 more)
applications/: CMakeLists.txt
applications/samples/000_hello_llri/: 000_hello_llri.vcxproj  CMakeLists.txt  source.cpp
applications/samples/001_hello_llri/: 001_hello_llri.vcxproj
applications/samples/001_validation/: 001_validation.vcxproj  001_validation.vcxproj.filters  CMakeLists.txt  source.cpp
applications/samples/002_validation_ext/: 002_validation_ext.vcxproj  CMakeLists.txt  source.cpp
applications/samples/002_validation_extensions/: CMakeLists.txt  source.cpp
applications/samples/003_adapter_selection/: 003_adapter_selection.vcxproj  CMakeLists.txt  source.cpp
applications/samples/004_device/: 004_device.vcxproj  CMakeLists.txt  source.cpp
applications/samples/005_commands/: 005_commands.vcxproj  CMakeLists.txt  source.cpp
applications/samples/006_queue_submit/: CMakeLists.txt  source.cpp
applications/samples/007_swapchain/: CMakeLists.txt  source.cpp
applications/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.vcxproj  sandbox.vcxproj.filters  source.cpp
applications/sandbox/module/: testmodule.hpp
applications/sandbox/systems/: testsystem.cpp  testsystem.hpp
applications/unit_tests/: CMakeLists.txt  helpers.hpp  instance.cpp  llri.cpp  unit_tests.vcxproj  unit_tests.vcxproj.filters
applications/unit_tests/detail/: adapter.cpp  command_group.cpp  command_list.cpp  device.cpp  device_extensions.cpp  device_resource_creation.cpp  instance.cpp  instance_extensions.cpp  queue.cpp
applications/unit_tests/detail/commands/: commands.cpp  resource_barrier.hpp
applications/unit_tests/detail/device_extensions/: device_extensions.cpp  swapchain_creation.hpp
applications/unit_tests/detail/instance_extensions/: instance_extensions.cpp  surface_capabilities.hpp  surface_cocoa.hpp  surface_properties.hpp  surface_win32.hpp  surface_xcb.hpp  surface_xlib.hpp
docs/: .gitignore  Doxyfile
docs/source/: LICENSE.md  (+6 more)
legion/engine/llri-dx/: CMakeLists.txt  directx.hpp  instance_extensions.cpp  llri-dx.vcxproj  llri-dx.vcxproj.filters  llri.cpp  source.cpp  utils.cpp
legion/engine/llri-dx/detail/: adapter.cpp  command_group.cpp  command_list.cpp  device.cpp  instance.cpp  instance_extensions.cpp  queue.cpp
legion/engine/llri-mtl/: CMakeLists.txt
legion/engine/llri-vk/: CMakeLists.txt  instance_extensions.cpp  llri-vk.vcxproj  llri-vk.vcxproj.filters  llri.cpp  source.cpp  utils.cpp  utils.hpp
legion/engine/llri-vk/detail/: adapter.cpp  command_group.cpp  command_list.cpp  device.cpp  instance.cpp  instance_extensions.cpp  metal_surface.mm  queue.cpp
lib/: legion-core-d.lib  legion-core.lib
src/llri-vk/: CMakeLists.txt  utils.cpp  utils.hpp
src/llri-vk/detail/: adapter.cpp  command_group.cpp  command_list.cpp  device.cpp  instance.cpp  instance_extensions.cpp  metal_surface.mm  queue.cpp
(+192 files in other folders)
